--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ discord.py==1.5.1
 youtube_dl==2021.4.17
 discord==1.0.1
 git+https://github.com/Rapptz/discord.py
-ffmpeg
+discord==1.0.1
+python-dotenv==0.15.0
+youtube-dl==2021.2.10
